--- a/03-lection1/01-button/index.html
+++ b/03-lection1/01-button/index.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
 <!-- Страница с кнопкой -->
 <html lang="ru">
-    <head>
-        <link rel="stylesheet" href="../../assets/css/main.css">
-        <link rel="stylesheet" href="./button.css">
-    </head>
-    <body>
 
-    </body>
+<head>
+    <link rel="stylesheet" href="../../assets/css/main.css">
+    <link rel="stylesheet" href="./button.css">
+</head>
+
+<body>
+    <main class="buttons">
+        <div class="button">
+            <button class="btn btn--primary">
+                Primary
+            </button>
+            <button class="btn btn--primary" disabled>
+                Primary
+            </button>
+            <button class="btn btn--secondary">
+                Secondary
+            </button>
+            <button class="btn btn--secondary" disabled>
+                Secondary
+            </button>
+            <button class="btn btn--alternate">
+                Alternate
+            </button>
+            <button class="btn btn--alternate" disabled>
+                Alternate
+            </button>
+
+        </div>
+    </main>
+</body>
+
 </html>
