add buttons with modifiers

--- a/03-lection1/01-button/index.html
+++ b/03-lection1/01-button/index.html
@@ -10,22 +10,22 @@
 <body>
     <main class="buttons">
         <div class="button">
-            <button class="btn btn--primary">
+            <button class="btn btn_primary">
                 Primary
             </button>
-            <button class="btn btn--primary" disabled>
+            <button class="btn btn_primary" disabled>
                 Primary
             </button>
-            <button class="btn btn--secondary">
+            <button class="btn btn_secondary">
                 Secondary
             </button>
-            <button class="btn btn--secondary" disabled>
+            <button class="btn btn_secondary" disabled>
                 Secondary
             </button>
-            <button class="btn btn--alternate">
+            <button class="btn btn_alternate">
                 Alternate
             </button>
-            <button class="btn btn--alternate" disabled>
+            <button class="btn btn_alternate" disabled>
                 Alternate
             </button>
 
