--- a/03-lection1/02-accordion/index.html
+++ b/03-lection1/02-accordion/index.html
@@ -8,24 +8,30 @@
 </head>
 
 <body>
-    <div class="accordeon">
+    <div class="accordeon accordeon__margin">
         <div class="accordeon__item">
-            <details>
+            <details class="accordeon__block">
                 <summary class="accordeon__title">
                     СМИ рассказали о переезде в Южную Америку нескольких сотен российских IT-специалистов
                 </summary>
                 <p class="accordeon__text">
-                    По информации Financial Times, с начала марта нескольких сотен российских IT-специалистов, инженеров, основателей стартапов и цифровых кочевников-разработчиков переехали в страны Южной Америки. Они пошли на это из-за простых правил въезда, спокойного отношения латиноамериканских стран к западным санкциям против РФ и высокого спроса в этом регионе на квалифицированных IT-специалистов и инженерные кадры.
+                    По информации Financial Times, с начала марта нескольких сотен российских IT-специалистов,
+                    инженеров, основателей стартапов и цифровых кочевников-разработчиков переехали в страны Южной
+                    Америки. Они пошли на это из-за простых правил въезда, спокойного отношения латиноамериканских стран
+                    к западным санкциям против РФ и высокого спроса в этом регионе на квалифицированных IT-специалистов
+                    и инженерные кадры.
                 </p>
+
             </details>
         </div>
         <div class="accordeon__item">
-            <details>
+            <details class="accordeon__block">
                 <summary class="accordeon__title">
                     Ключевое слово «volatile» C/C++
                 </summary>
-                <p  class="accordeon__text">
-                    Volatile — ключевое слово языков C/C++, которое информирует компилятор о том, что значение переменной может меняться из вне и что компилятор не будет оптимизировать эту переменную.
+                <p class="accordeon__text">
+                    Volatile — ключевое слово языков C/C++, которое информирует компилятор о том, что значение
+                    переменной может меняться из вне и что компилятор не будет оптимизировать эту переменную.
                 </p>
             </details>
         </div>
