--- a/05-lection3/02-modal/index.html
+++ b/05-lection3/02-modal/index.html
@@ -7,6 +7,17 @@
         <title>Modal</title>
     </head>
     <body>
+        <div class="modal">
+            <div class="button">Open modal</div>
+            <div class="modal__window">
+                <div class="modal__cross"></div>
+                <div class="modal__inner">
+                <div class="modal__title">Modal title</div>
+                <div class="modal__text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                    Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>    
+                </div>
+            </div>
+        </div>
     </body>
     <script src="./index.js"></script> 
 </html>
