add layout page change

--- a/pages/layout.html
+++ b/pages/layout.html
@@ -8,14 +8,17 @@
 
 <body>
 	<div class="layout">
-		<div class="header .header_layout"></div>
+		<div class="header header_layout"></div>
 		<div class="content">
 			<aside class="sidebar"></aside>
-			<div class="content__main">
-				<h2 class="content__title">Custom form elements</h2>
-			</div>
+			<main class="content__main">
+				<div class="content__inner">
+					<h2 class="content__title">Custom form elements</h2>
+				</div>
+			</main>
 		</div>
-		<div class="footer footer_layout"></div>
+		<div class="footer footer_layout">
+		</div>
 	</div>
 </body>
 
