--- a/06-lection4/02-background-image/index.html
+++ b/06-lection4/02-background-image/index.html
@@ -5,6 +5,8 @@
         <link rel="stylesheet" href="./background-image.css">
     </head>
     <body>
-
+<div class="block">
+    1
+</div>
     </body>
 </html>
