--- a/pages/layout.html
+++ b/pages/layout.html
@@ -8,16 +8,55 @@
 
 <body>
 	<div class="layout">
-		<div class="header header_layout"></div>
+		<div class="header header_layout">
+			<div class="header__logo">
+				<svg width="110" height="32" viewBox="0 0 110 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<rect y="1" width="30" height="30" fill="#212429" />
+					<rect x="38" width="32" height="32" rx="16" fill="#212429" />
+					<path d="M78 0L110 32H78V0Z" fill="#212429" />
+				</svg>
+
+			</div>
+		</div>
 		<div class="content">
-			<aside class="sidebar"></aside>
+			<aside class="sidebar">
+				<nav class="sidebar__menu">
+					<div class="sidebar__list">
+						<h4 class="sidebar__title">Elements</h4>
+						<a href="#" class="sidebar__item-menu">Avatar</a>
+						<a href="#" class="sidebar__item-menu">Custom form elements</a>
+						<a href="#" class="sidebar__item-menu">Button</a>
+						<a href="#" class="sidebar__item-menu">Avatar</a>
+						<a href="#" class="sidebar__item-menu">Custom form elements</a>
+						<a href="#" class="sidebar__item-menu">Button</a>
+					</div>
+					<div class="sidebar__list">
+						<h4 class="sidebar__title">Containers</h4>
+						<a href="#" class="sidebar__item-menu">Avatar</a>
+						<a href="#" class="sidebar__item-menu">Custom form elements</a>
+						<a href="#" class="sidebar__item-menu">Button</a>
+						<a href="#" class="sidebar__item-menu">Avatar</a>
+						<a href="#" class="sidebar__item-menu">Custom form elements</a>
+						<a href="#" class="sidebar__item-menu">Button</a>
+					</div>
+					<div class="sidebar__list">
+						<h4 class="sidebar__title">Templates</h4>
+						<a href="#" class="sidebar__item-menu">Avatar</a>
+						<a href="#" class="sidebar__item-menu">Custom form elements</a>
+						<a href="#" class="sidebar__item-menu">Button</a>
+						<a href="#" class="sidebar__item-menu">Avatar</a>
+						<a href="#" class="sidebar__item-menu">Custom form elements</a>
+						<a href="#" class="sidebar__item-menu">Button</a>
+					</div>
+			</aside>
 			<main class="content__main">
 				<div class="content__inner">
-					<h2 class="content__title">Custom form elements</h2>
+					<h3 class="content__title">Custom form elements</h3>
 				</div>
 			</main>
 		</div>
 		<div class="footer footer_layout">
+			Reusable component library
 		</div>
 	</div>
 </body>
