add button style

--- a/05-lection3/02-modal/index.html
+++ b/05-lection3/02-modal/index.html
@@ -5,11 +5,12 @@
 <head>
     <link rel="stylesheet" href="../../assets/css/main.css">
     <link rel="stylesheet" href="./modal.css">
+    <link rel="stylesheet" href="../../03-lection1/01-button/button.css">
     <title>Modal</title>
 </head>
 
 <body>
-    <div class="btn btn_primary">Open modal</div>
+    <button class="btn btn_primary">Open modal</button>
     <div class="modal">
         <div class="modal__window">
             <div class="modal__cross"></div>
