--- a/07-lection5/04-input/index.html
+++ b/07-lection5/04-input/index.html
@@ -31,5 +31,10 @@
     
 </label> 
 
+<label class="input input_disabled">
+    <div class="input__title">Disabled</div>
+    <input type="text" disabled class="input__field" placeholder="Disabled">
+    
+</label> 
     </body>
 </html>
