--- a/07-lection5/04-input/index.html
+++ b/07-lection5/04-input/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="./input.css">
     </head>
     <body>
-
+<form class="form-group" action="#">
 <label class="input">
     <div class="input__title">Label</div>
     <input type="text" class="input__field" placeholder="Placeholder">
@@ -36,5 +36,6 @@
     <input type="text" disabled class="input__field" placeholder="Disabled">
     
 </label> 
+</form>
     </body>
 </html>
