--- a/07-lection5/03-toggler/index.html
+++ b/07-lection5/03-toggler/index.html
@@ -1,11 +1,48 @@
 <!DOCTYPE html>
 <!-- Страница с кнопкой переключения -->
 <html lang="ru">
-    <head>
-        <link rel="stylesheet" href="../../assets/css/main.css">
-        <link rel="stylesheet" href="./toggler.css">
-    </head>
-    <body>
 
-    </body>
+<head>
+    <link rel="stylesheet" href="../../assets/css/main.css">
+    <link rel="stylesheet" href="./toggler.css">
+</head>
+
+<body>
+
+
+    <div class="title">Toggle button</div>
+
+    <label class="toggler toggler_default">
+        <input type="checkbox" class="toggler__input">
+        <div class="toggler__state">
+            <div class="toggler__control">
+                <div class="toggler__switcher"></div>
+            </div>
+            <div class="toggler__title">Default</div>
+        </div>
+    </label>
+
+    <label class="toggler toggler_checked">
+        <input type="checkbox" checked class="toggler__input">
+        <div class="toggler__state">
+            <div class="toggler__control">
+                <div class="toggler__switcher"></div>
+            </div>
+            <div class="toggler__title">Checked</div>
+        </div>
+    </label>
+
+
+    <label class="toggler toggler_disabled">
+        <input type="checkbox" disabled class="toggler__input">
+        <div class="toggler__state">
+            <div class="toggler__control">
+                <div class="toggler__switcher"></div>
+            </div>
+            <div class="toggler__title">Disabled</div>
+        </div>
+    </label>
+
+</body>
+
 </html>
