add input label

--- a/07-lection5/04-input/index.html
+++ b/07-lection5/04-input/index.html
@@ -9,22 +9,22 @@
 
 <body>
     <div class="input">
-        <div class="input__title">Label</div>
-        <input type="text" class="input__field" placeholder="Placeholder">
+        <label for="input1" class="input__title">Label</label>
+        <input type="text" class="input__field" id="input1" placeholder="Placeholder">
 
     </div>
 
 
     <div class="input input_focus">
-        <div class="input__title">Focus</div>
-        <input type="text" class="input__field" placeholder="Filled input">
+        <label for="input2" class="input__title">Focus</label>
+        <input type="text" class="input__field" id="input2" placeholder="Filled input">
 
     </div>
 
     <div class="input input_success">
-        <div class="input__title">Success</div>
+        <label for="input3" class="input__title">Success</label>
         <div class="input__block">
-            <input type="text" class="input__field" placeholder="Placeholder">
+            <input type="text" class="input__field" id="input3" placeholder="Placeholder">
 
             <svg class="input__icon input__icon_success">
                 <use href="../../assets/images/icons/sprite.svg#success"></use>
@@ -33,9 +33,9 @@
     </div>
 
     <div class="input input_invalid">
-        <div class="input__title">Error</div>
+        <label for="input4" class="input__title">Error</label>
         <div class="input__block">
-            <input type="text" class="input__field" placeholder="Error">
+            <input type="text" class="input__field" id="input4" placeholder="Error">
             <svg class="input__icon input__icon_error">
                 <use href="../../assets/images/icons/sprite.svg#error"></use>
             </svg>
@@ -43,8 +43,8 @@
     </div>
 
     <div class="input input_disabled">
-        <div class="input__title">Disabled</div>
-        <input type="text" disabled class="input__field" placeholder="Disabled">
+        <label for="input5" class="input__title">Disabled</label>
+        <input type="text" disabled class="input__field" id="input5" placeholder="Disabled">
 
     </div>
 
