--- a/pages/layout.html
+++ b/pages/layout.html
@@ -18,46 +18,59 @@
 
 			</div>
 		</div>
+		
+<div class="center-block">
+		<div class="container container_layout">
 		<div class="content">
-			<aside class="sidebar">
-				<nav class="sidebar__menu">
-					<div class="sidebar__list">
-						<h4 class="sidebar__title">Elements</h4>
-						<a href="#" class="sidebar__item-menu">Avatar</a>
-						<a href="#" class="sidebar__item-menu">Custom form elements</a>
-						<a href="#" class="sidebar__item-menu">Button</a>
-						<a href="#" class="sidebar__item-menu">Avatar</a>
-						<a href="#" class="sidebar__item-menu">Custom form elements</a>
-						<a href="#" class="sidebar__item-menu">Button</a>
+			
+				<aside class="sidebar">
+
+					<nav class="sidebar__menu">
+						<div class="sidebar__list">
+							<h4 class="sidebar__title">Elements</h4>
+							<a href="#" class="sidebar__item-menu">Avatar</a>
+							<a href="#" class="sidebar__item-menu">Custom form elements</a>
+							<a href="#" class="sidebar__item-menu">Button</a>
+							<a href="#" class="sidebar__item-menu">Avatar</a>
+							<a href="#" class="sidebar__item-menu">Custom form elements</a>
+							<a href="#" class="sidebar__item-menu">Button</a>
+						</div>
+						<div class="sidebar__list">
+							<h4 class="sidebar__title">Containers</h4>
+							<a href="#" class="sidebar__item-menu">Avatar</a>
+							<a href="#" class="sidebar__item-menu">Custom form elements</a>
+							<a href="#" class="sidebar__item-menu">Button</a>
+							<a href="#" class="sidebar__item-menu">Avatar</a>
+							<a href="#" class="sidebar__item-menu">Custom form elements</a>
+							<a href="#" class="sidebar__item-menu">Button</a>
+						</div>
+						<div class="sidebar__list">
+							<h4 class="sidebar__title">Templates</h4>
+							<a href="#" class="sidebar__item-menu">Avatar</a>
+							<a href="#" class="sidebar__item-menu">Custom form elements</a>
+							<a href="#" class="sidebar__item-menu">Button</a>
+							<a href="#" class="sidebar__item-menu">Avatar</a>
+							<a href="#" class="sidebar__item-menu">Custom form elements</a>
+							<a href="#" class="sidebar__item-menu">Button</a>
+						</div>
+
+				</aside>
+				<main class="content__main">
+					<div class="content__inner">
+						<h3 class="content__title">Custom form elements</h3>
 					</div>
-					<div class="sidebar__list">
-						<h4 class="sidebar__title">Containers</h4>
-						<a href="#" class="sidebar__item-menu">Avatar</a>
-						<a href="#" class="sidebar__item-menu">Custom form elements</a>
-						<a href="#" class="sidebar__item-menu">Button</a>
-						<a href="#" class="sidebar__item-menu">Avatar</a>
-						<a href="#" class="sidebar__item-menu">Custom form elements</a>
-						<a href="#" class="sidebar__item-menu">Button</a>
-					</div>
-					<div class="sidebar__list">
-						<h4 class="sidebar__title">Templates</h4>
-						<a href="#" class="sidebar__item-menu">Avatar</a>
-						<a href="#" class="sidebar__item-menu">Custom form elements</a>
-						<a href="#" class="sidebar__item-menu">Button</a>
-						<a href="#" class="sidebar__item-menu">Avatar</a>
-						<a href="#" class="sidebar__item-menu">Custom form elements</a>
-						<a href="#" class="sidebar__item-menu">Button</a>
-					</div>
-			</aside>
-			<main class="content__main">
-				<div class="content__inner">
-					<h3 class="content__title">Custom form elements</h3>
-				</div>
-			</main>
+				</main>
+			
 		</div>
+	</div>
+</div>
+
+
 		<div class="footer footer_layout">
 			Reusable component library
 		</div>
+
+
 	</div>
 </body>
 
