add tooltip with inline style

--- a/05-lection3/01-tooltip/index.html
+++ b/05-lection3/01-tooltip/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./tooltip.css">
 </head>
 
-<body>
+<body style="padding-top: 100px; padding-left: 100px">
     <div class="tooltip">
         <div class="tooltip__trigger"><svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
