add tooltip with inline style

--- a/pages/layout.html
+++ b/pages/layout.html
@@ -20,7 +20,7 @@
 		</div>
 		
 <div class="center-block">
-		<div class="container container_layout">
+		<div class="container container_flex">
 		<div class="content">
 			
 				<aside class="sidebar">
@@ -36,6 +36,7 @@
 							<a href="#" class="sidebar__item-menu">Button</a>
 						</div>
 						<div class="sidebar__list">
+							
 							<h4 class="sidebar__title">Containers</h4>
 							<a href="#" class="sidebar__item-menu">Avatar</a>
 							<a href="#" class="sidebar__item-menu">Custom form elements</a>
