--- a/07-lection5/tabs/tabs.html
+++ b/07-lection5/tabs/tabs.html
@@ -12,33 +12,42 @@
 
 <body>
 	<div class="tabs">
-		<input type="radio" class="tabs__input" id="#all-tab" name="choise" checked>
-		<input type="radio" class="tabs__input" id="atoms-tab" name="choise">
+		<input type="radio" class="tabs__input" id="all-tab" name="choise" checked>
+		<input type="radio" class="tabs__input" id="complex-tab" name="choise">
 		<input type="radio" class="tabs__input" id="simple-tab" name="choise">
 
 		<div class="tabs__scroller">
 			<div class="tabs__switcher">
-				<label for="#all-tab" class="tabs__title">All components</label>
-				<div class="tabs__control"></div>
+				<label for="all-tab" class="tabs__title tabs__title_all">All components</label>
+				<div class="tabs__control tabs__control_all"></div>
 			</div>
+
 			<div class="tabs__switcher">
-				<label for="#atoms-tab" class="tabs__title">Complex</label>
+				<label for="complex-tab" class="tabs__title tabs__title_complex">Complex</label>
 				<div class="tabs__control"></div>
 
 			</div>
 			<div class="tabs__switcher">
-				<label for="#simple-tab" class="tabs__title">Simple</label>
+				<label for="simple-tab" class="tabs__title tabs__title_simple">Simple</label>
 				<div class="tabs__control"></div>
 			</div>
 		</div>
+<hr class="tabs__line">
 
-	
+	<div class="tabs__main">
+
+
+<div class="tabs__content tabs__content_complex">
+	Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis illo hic saepe quasi ipsa corporis ipsam beatae? Placeat accusamus provident illo qui? Reiciendis autem magnam quia optio nisi pariatur culpa.
+</div>
+
 		<div class="tabs__content tabs__content_simple">
 			Lorem, ipsum dolor.
 		</div>
-
+	</div>
 
 	</div>
+
 </body>
 
 </html>
