add burger header

--- a/pages/layout.html
+++ b/pages/layout.html
@@ -27,6 +27,14 @@
 						<a href="#" class="header__item">Contact</a>
 					</nav>
 					<div class="header__themes">
+						<div class="header__icons">
+							<div class="header__dark">
+								<svg>
+								<use xlink:href="#lite"></use>
+							</svg>
+							</div>
+							<div class="header__lite"></div>
+						</div>
 					</div>
 
 				</div>
