add burger after review

--- a/09-lection7/01-burger-menu/index.html
+++ b/09-lection7/01-burger-menu/index.html
@@ -25,11 +25,13 @@
                 <svg class="header__icon" id="burger-menu-open" data-open="open">
                     <use xlink:href="../../assets/images/icons/sprite.svg#burger"></use>
                 </svg>
+               
 
 
                 <svg class="header__icon" id="burger-menu-close">
                     <use xlink:href="../../assets/images/icons/sprite.svg#cross"></use>
                 </svg>
+                <div class="header__circle"></div>
 
             </div>
         </div>
