--- a/pages/layout.html
+++ b/pages/layout.html
@@ -27,13 +27,19 @@
 						<a href="#" class="header__item">Contact</a>
 					</nav>
 					<div class="header__themes">
-						<div class="header__icons">
+						<div class="header__theme">
+							<div class="header__lite">
+								<svg>
+									<use xlink:href="../../assets/images/icons/sprite.svg#lite"></use>
+								</svg>
+							</div>
+							
 							<div class="header__dark">
 								<svg>
-								<use xlink:href="#lite"></use>
+								<use xlink:href="../../assets/images/icons/sprite.svg#dark"></use>
 							</svg>
 							</div>
-							<div class="header__lite"></div>
+						
 						</div>
 					</div>
 
