--- a/pages/layout.html
+++ b/pages/layout.html
@@ -5,7 +5,7 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
-	<link rel="stylesheet" href="../../07-lection5/03-toggler/toggler.css">
+	<link rel="stylesheet" href="../07-lection5/03-toggler/toggler.css">
 </head>
 
 <body>
