add burger with toggler

--- a/pages/layout.html
+++ b/pages/layout.html
@@ -31,7 +31,7 @@
 						<div class="header__theme">
 							<div class="header__lite">
 								<svg>
-									<use xlink:href="../../assets/images/icons/sprite.svg#lite"></use>
+									<use xlink:href="../assets/images/icons/sprite.svg#lite"></use>
 								</svg>
 							</div>
 							
@@ -48,7 +48,7 @@
 
 							<div class="header__dark">
 								<svg>
-								<use xlink:href="../../assets/images/icons/sprite.svg#dark"></use>
+								<use xlink:href="../assets/images/icons/sprite.svg#dark"></use>
 							</svg>
 							</div>
 						
