--- a/09-lection7/01-burger-menu/index.html
+++ b/09-lection7/01-burger-menu/index.html
@@ -42,7 +42,7 @@
 
         <div class="burger__nav">
             <div class="burger__mode">
-               
+               <div class="burger__divider"></div>
                     <label class="toggler toggler_burger">
                         <div class="toggler__title toggler__title_burger"> Dark mode</div>
                         <input type="checkbox" class="toggler__input">
