--- a/index.html
+++ b/index.html
@@ -10,6 +10,54 @@
     <div class="page">
         <header class="header">
             <div class="container">
+                <div class="header__top">
+                    <div class="header__logo">
+                        <svg width="110" height="32" viewBox="0 0 110 32" fill="none"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <rect y="1" width="30" height="30" fill="#212429" />
+                            <rect x="38" width="32" height="32" rx="16" fill="#212429" />
+                            <path d="M78 0L110 32H78V0Z" fill="#212429" />
+                        </svg>
+
+                    </div>
+                    <div class="header__nav">
+
+                        <nav class="header__menu">
+                            <a href="#" class="header__item">Components</a>
+                            <a href="#" class="header__item">About</a>
+                            <a href="#" class="header__item">Contact</a>
+                        </nav>
+                        <div class="header__themes">
+                            <div class="header__theme">
+                                <div class="header__lite">
+                                    <svg>
+                                        <use xlink:href="../assets/images/icons/sprite.svg#lite"></use>
+                                    </svg>
+                                </div>
+
+                                <label class="toggler">
+                                    <div class="toggler__title"></div>
+                                    <input type="checkbox" class="toggler__input">
+                                    <div class="toggler__state">
+                                        <div class="toggler__control">
+                                            <div class="toggler__switcher"></div>
+                                        </div>
+
+                                    </div>
+                                </label>
+
+                                <div class="header__dark">
+                                    <svg>
+                                        <use xlink:href="../assets/images/icons/sprite.svg#dark"></use>
+                                    </svg>
+                                </div>
+
+
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
                 <h1 class="header__title"> Reusable component library</h1>
             </div>
 
@@ -17,7 +65,21 @@
         <main class="preview">
             <div class="container">
                 <div class="preview__inner">
-                    <div class="card preview__card "></div>
+                    <div class="card preview__card">
+                        <div class="card__item">
+                            <div class="tooltip">
+                                <svg class="tooltip__trigger">
+                                    <use xlink:href="./assets/images/icons/sprite.svg#question"></use>
+                                </svg>
+
+                                <div class="tooltip__bubble">Helper Text</div>
+                            </div>
+                        </div>
+                        <div class="card__name">
+                            <div class="card__title">Tooltip</div>
+                            <div class="card__subtitle">Container</div>
+                        </div>
+                    </div>
                     <div class="card preview__card"></div>
                     <div class="card preview__card"></div>
                     <div class="card preview__card "></div>
