--- a/index.html
+++ b/index.html
@@ -67,16 +67,16 @@
                 <div class="preview__inner">
                     <div class="card preview__card">
                         <div class="card__item">
-                            <div class="tooltip">
+                            <div class="tooltip tooltip_preview">
                                 <svg class="tooltip__trigger">
                                     <use xlink:href="./assets/images/icons/sprite.svg#question"></use>
                                 </svg>
 
-                                <div class="tooltip__bubble">Helper Text</div>
+                                <div class="tooltip__bubble tooltip__bubble_preview">Helper Text</div>
                             </div>
                         </div>
                         <div class="card__name">
-                            <div class="card__title">Tooltip</div>
+                            <a class="card__title" href="./05-lection3/01-tooltip/index.html">Tooltip</a>
                             <div class="card__subtitle">Container</div>
                         </div>
                     </div>
