add main changes

--- a/07-lection5/01-checkbox/index.html
+++ b/07-lection5/01-checkbox/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <label class="checkbox checkbox_default">
+    <label class="checkbox">
         <input type="checkbox" class="checkbox__input">
         <div class="checkbox__state">
             <div class="checkbox__control">
@@ -23,7 +23,7 @@
         </div>
     </label>
 
-    <label class="checkbox checkbox_checked">
+    <label class="checkbox">
         <input type="checkbox" checked class="checkbox__input">
         <div class="checkbox__state">
             <div class="checkbox__control">
@@ -39,7 +39,7 @@
     </label>
 
 
-    <label class="checkbox checkbox_disabled">
+    <label class="checkbox">
         <input type="checkbox" disabled class="checkbox__input">
         <div class="checkbox__state">
             <div class="checkbox__control">
