--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@
         <main class="preview">
             <div class="container">
                 <div class="preview__inner">
-                    <div class="card preview__card">
+                    <div class="card">
                         <div class="card__item">
+
                             <div class="tooltip tooltip_preview">
                                 <svg class="tooltip__trigger">
                                     <use xlink:href="./assets/images/icons/sprite.svg#question"></use>
@@ -74,20 +75,173 @@
 
                                 <div class="tooltip__bubble tooltip__bubble_preview">Helper Text</div>
                             </div>
+
                         </div>
                         <div class="card__name">
                             <a class="card__title" href="./05-lection3/01-tooltip/index.html">Tooltip</a>
                             <div class="card__subtitle">Container</div>
                         </div>
                     </div>
-                    <div class="card preview__card"></div>
-                    <div class="card preview__card"></div>
-                    <div class="card preview__card "></div>
-                    <div class="card preview__card"></div>
-                    <div class="card preview__card"></div>
-                </div>
 
+
+                    <div class="card">
+                        <div class="card__item card__item_form">
+                            <div class="card__align">
+
+                                <div class="card__wrapper">
+                                    <label class="checkbox">
+                                        <input type="checkbox" class="checkbox__input">
+                                        <div class="checkbox__state">
+                                            <div class="checkbox__control">
+                                                <svg class="checkbox__icon" width="15" height="13" viewBox="0 0 15 13"
+                                                    fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                    <path d="M1.5 7.5L5 11L13 2" stroke="white" stroke-width="3"
+                                                        stroke-linecap="round" stroke-linejoin="round" />
+                                                </svg>
+
+                                            </div>
+                                            <div class="checkbox__title">Default</div>
+                                        </div>
+                                    </label>
+
+                                    <label class="checkbox">
+                                        <input type="checkbox" checked class="checkbox__input">
+                                        <div class="checkbox__state">
+                                            <div class="checkbox__control">
+                                                <svg class="checkbox__icon" width="15" height="13" viewBox="0 0 15 13"
+                                                    fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                    <path d="M1.5 7.5L5 11L13 2" stroke="white" stroke-width="3"
+                                                        stroke-linecap="round" stroke-linejoin="round" />
+                                                </svg>
+
+                                            </div>
+                                            <div class="checkbox__title">Checked</div>
+                                        </div>
+                                    </label>
+
+
+                                    <label class="checkbox">
+                                        <input type="checkbox" disabled class="checkbox__input">
+                                        <div class="checkbox__state">
+                                            <div class="checkbox__control">
+                                                <svg class="checkbox__icon" width="15" height="13" viewBox="0 0 15 13"
+                                                    fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                    <path d="M1.5 7.5L5 11L13 2" stroke="white" stroke-width="3"
+                                                        stroke-linecap="round" stroke-linejoin="round" />
+                                                </svg>
+
+                                            </div>
+                                            <div class="checkbox__title">Disabled</div>
+                                        </div>
+                                    </label>
+                                </div>
+                                <div class="card__wrapper">
+
+                                    <label class="radio">
+                                        <input type="radio" class="radio__input" name="radio" value="1">
+                                        <div class="radio__state">
+                                            <div class="radio__control">
+                                                <div class="radio__circle"></div>
+                                            </div>
+                                            <div class="radio__title">Default</div>
+                                        </div>
+                                    </label>
+
+
+                                    <label class="radio">
+                                        <input type="radio" checked class="radio__input" name="radio" value="2">
+                                        <div class="radio__state">
+                                            <div class="radio__control">
+                                                <div class="radio__circle"></div>
+                                            </div>
+                                            <div class="radio__title">Checked</div>
+                                        </div>
+                                    </label>
+
+                                    <label class="radio">
+                                        <input type="radio" disabled class="radio__input" name="radio" value="3">
+                                        <div class="radio__state">
+                                            <div class="radio__control">
+                                                <div class="radio__circle"></div>
+                                            </div>
+                                            <div class="radio__title">Disabled</div>
+                                        </div>
+                                    </label>
+                                </div>
+
+                            </div>
+                        </div>
+
+                        <div class="card__name">
+                            <a class="card__title" href="./05-lection3/01-tooltip/index.html">Custom form elements</a>
+                            <div class="card__subtitle">Element</div>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card__item">
+                            <div class="calendar">
+                                <div class="calendar__title">October 2019</div>
+                                <div class="calendar__wrapper">
+                                    <div class="calendar__inner">
+                                        <div class="calendar__item calendar__item_day">Mon</div>
+                                        <div class="calendar__item calendar__item_day">Tue</div>
+                                        <div class="calendar__item calendar__item_day">Wed</div>
+                                        <div class="calendar__item calendar__item_day">Thu</div>
+                                        <div class="calendar__item calendar__item_day">Fri</div>
+                                        <div class="calendar__item calendar__item_day">Sat</div>
+                                        <div class="calendar__item calendar__item_day">Sun</div>
+                                        <div class="calendar__item"></div>
+                                        <div class="calendar__item"></div>
+                                        <div class="calendar__item"></div>
+                                        <div class="calendar__item"></div>
+                                        <div class="calendar__item">1</div>
+                                        <div class="calendar__item">2</div>
+                                        <div class="calendar__item">3</div>
+                                        <div class="calendar__item">4</div>
+                                        <div class="calendar__item">5</div>
+                                        <div class="calendar__item">6</div>
+                                        <div class="calendar__item">7</div>
+                                        <div class="calendar__item">8</div>
+                                        <div class="calendar__item">9</div>
+                                        <div class="calendar__item">10</div>
+                                        <div class="calendar__item">11</div>
+                                        <div class="calendar__item">12</div>
+                                        <div class="calendar__item">13</div>
+                                        <div class="calendar__item">14</div>
+                                        <div class="calendar__item">15</div>
+                                        <div class="calendar__item">16</div>
+                                        <div class="calendar__item">17</div>
+                                        <div class="calendar__item calendar__item_active">18</div>
+                                        <div class="calendar__item calendar__item_between-active">19</div>
+                                        <div class="calendar__item calendar__item_between-active">20</div>
+                                        <div class="calendar__item calendar__item_between-active">21</div>
+                                        <div class="calendar__item calendar__item_between-active">22</div>
+                                        <div class="calendar__item calendar__item_active">23</div>
+                                        <div class="calendar__item">24</div>
+                                        <div class="calendar__item">25</div>
+                                        <div class="calendar__item">26</div>
+                                        <div class="calendar__item">27</div>
+                                        <div class="calendar__item">28</div>
+                                        <div class="calendar__item">29</div>
+                                        <div class="calendar__item">30</div>
+                                        <div class="calendar__item">31</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card__name">
+                            <a class="card__title" href="./05-lection3/01-tooltip/index.html">Calendar</a>
+                            <div class="card__subtitle">Container</div>
+                        </div>
+                        
+                    </div>
+                    <div class="card"></div>
+                    <div class="card"></div>
+                    <div class="card"></div>
+                </div>
             </div>
+
         </main>
         <footer class="footer">
             <div class="container">
