add main calendar

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <main class="preview">
             <div class="container">
                 <div class="preview__inner">
+
                     <div class="card">
                         <div class="card__item">
 
@@ -83,8 +84,9 @@
                         </div>
                     </div>
 
+                    <div href="#" class="card">
 
-                    <div class="card">
+
                         <div class="card__item card__item_form">
                             <div class="card__align">
 
@@ -180,7 +182,7 @@
 
                     <div class="card">
                         <div class="card__item">
-                            <div class="calendar">
+                            <div class="calendar calendar_preview">
                                 <div class="calendar__title">October 2019</div>
                                 <div class="calendar__wrapper">
                                     <div class="calendar__inner">
@@ -234,7 +236,7 @@
                             <a class="card__title" href="./05-lection3/01-tooltip/index.html">Calendar</a>
                             <div class="card__subtitle">Container</div>
                         </div>
-                        
+
                     </div>
                     <div class="card"></div>
                     <div class="card"></div>
