add main with histogramm

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             </div>
 
         </header>
+
         <main class="preview">
             <div class="container">
                 <div class="preview__inner">
@@ -78,6 +79,7 @@
                             </div>
 
                         </div>
+
                         <div class="card__name">
                             <a class="card__title" href="./05-lection3/01-tooltip/index.html">Tooltip</a>
                             <div class="card__subtitle">Container</div>
@@ -238,9 +240,101 @@
                         </div>
 
                     </div>
-                    <div class="card"></div>
-                    <div class="card"></div>
-                    <div class="card"></div>
+
+                    <div class="card">
+                        <div class="card__item">
+                            <div class="modal modal_preview">
+                                <div class="modal__window">
+
+                                    <div class="modal__inputs">
+                                        <label class="modal__input"> Name
+                                            <input type="text" placeholder="Plaseholder" class="modal__item">
+                                        </label>
+
+                                        <label class="modal__input">Email
+                                            <input type="text" placeholder="Plaseholder" class="modal__item">
+                                        </label>
+                                    </div>
+                                </div>
+
+
+                            </div>
+                        </div>
+
+                        <div class="card__name">
+                            <a class="card__title" href="./05-lection3/01-tooltip/index.html">Modal dialog</a>
+                            <div class="card__subtitle">Container</div>
+                        </div>
+                    </div>
+
+
+                    <div class="card">
+                        <div class="card__item">
+                            <div class="histogram histogram_preview">
+                                <div class="histogram__top">
+                                    <div class="histogram__left-part">
+                                        <div class="histogram__title">Total orders</div>
+                                        <div class="histogram__number">50254</div>
+                                    </div>
+                                    <div class="histogram__right-part"><a class="histogram__link" href="#">View all</a></div>
+                                </div>
+                                <div class="histogram__chart">
+                                    <div class="histogram__column" style="height:50%"></div>
+                                    <div class="histogram__column" style="height:100%"></div>
+                                    <div class="histogram__column" style="height:30%"></div>
+                                    <div class="histogram__column" style="height:70%"></div>
+                                    <div class="histogram__column" style="height:50%"></div>
+                                    <div class="histogram__column" style="height:50%"></div>
+                                    <div class="histogram__column" style="height:20%"></div>
+                                    <div class="histogram__column" style="height:30%"></div>
+                                    <div class="histogram__column" style="height:60%"></div>
+                                    <div class="histogram__column" style="height:80%"></div>
+                                    <div class="histogram__column" style="height:60%"></div>
+                                    <div class="histogram__column" style="height:70%"></div>
+                                    <div class="histogram__column" style="height:10%"></div>
+                                    <div class="histogram__column" style="height:50%"></div>
+                                    <div class="histogram__column" style="height:20%"></div>
+                                    <div class="histogram__column" style="height:30%"></div>
+                                    <div class="histogram__column" style="height:60%"></div>
+                                    <div class="histogram__column" style="height:80%"></div>
+                                    <div class="histogram__column" style="height:60%"></div>
+                                    <div class="histogram__column" style="height:70%"></div>
+                                    <div class="histogram__column" style="height:40%"></div>
+                                    <div class="histogram__column" style="height:100%"></div>
+                                    <div class="histogram__column" style="height:20%"></div>
+                                    <div class="histogram__column" style="height:70%"></div>
+                                    <div class="histogram__column" style="height:10%"></div>
+                                    <div class="histogram__column" style="height:50%"></div>
+                                    <div class="histogram__column" style="height:100%"></div>
+                                    <div class="histogram__column" style="height:30%"></div>
+                                    <div class="histogram__column" style="height:70%"></div>
+                                    <div class="histogram__column" style="height:50%"></div>
+                                    <div class="histogram__column" style="height:80%"></div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="card__name">
+                            <a class="card__title" href="./05-lection3/01-tooltip/index.html">Histogram</a>
+                            <div class="card__subtitle">Element</div>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card__item">
+                            <div class="avatar">
+                                <div class="avatar__background">
+                                    <img src="../../assets/images/avatar/avatar-200.jpg" alt="avatar"
+                                        class="avatar__image">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card__name">
+                            <a class="card__title" href="./05-lection3/01-tooltip/index.html">Avatar</a>
+                            <div class="card__subtitle">Element</div>
+                        </div>
+
+                    </div>
                 </div>
             </div>
 
